2008-04-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/cattributes.c (igraph_i_cattribute_add_{edges,vertices}) :
	fixed a memory leak
	
2008-04-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_pajek) : fixed issue #105

2008-03-25  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_gml) : directed graphs
	are now treated correctly (same as in igraph_read_graph_gml)

2008-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_unfold_tree) : added

	* src/layout.c (igraph_layout_fruchterman_reingold) :
	'miny' and 'maxy' arguments added

	* src/layout.c (igraph_layout_kamada_kawai_3d) : 'fixz'
	argument added

2008-03-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cattributes.c (igraph_i_cattribute_get_string_vertex_attr)
	(igraph_i_cattribute_get_string_edge_attr)
	(igraph_i_cattribute_EAS_set) : bugs corrected

2008-02-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_reingold_tilford)
	(igraph_layout_reingold_tilford_circular) : 'mode' and 'rootlevel' 
	 arguments added, 'roots' (instead of 'root') is a vector now.
	 This allows better handling of unconnected graphs.

2008-02-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_pagerank) : fixed issue #77

2008-02-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_adjlist) : added
	* examples/simple/adjlist.c : added
	
	* src/adjlist.c (igraph_adjlist_size) : added

2008-02-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) : added

	* src/structural_properties.c (igraph_shortest_paths) : return 
	IGRAPH_INFINITY for unreachable vertices

	* src/heap.c (igraph_indheap_push_index, igraph_indheap_push_with_index) 
	: renamed, it was inconsistent here and in the header

2008-02-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_transitiviy_local) : bug fixed
