@@ -1,0 +1,30 @@
+0 --> 1: 1
+0 --> 2: 2
+1 --> 0: 2
+1 --> 3: 1
+2 --> 2: 1
+3 --> 1: 1
+
+0 --- 1: 1
+0 --- 2: 2
+1 --- 3: 1
+2 --- 2: 1
+
+0 --- 1: 2
+2 --- 2: 1
+1 --- 3: 1
+
+0 --- 1: 1
+1 --- 3: 1
+2 --- 2: 1
+
+0 --- 1: 2
+0 --- 2: 2
+1 --- 3: 1
+2 --- 2: 1
+
+0 --- 1: 3
+0 --- 2: 2
+1 --- 3: 2
+2 --- 2: 1
+
